--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="this_is_an_hint">hint</string>
     <string name="this_is_an_hint_for_number_edit">Write your number</string>
     <string name="welcome">Welcome to our wonderful application</string>
+    <string name="api_config">https://api.github.com/</string>
 </resources>
